--- a/canary-app-automatic/rollout.yaml
+++ b/canary-app-automatic/rollout.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: webserver-simple
-        image: docker.io/kostiscodefresh/gitops-canary-app:v2.0
+        image: docker.io/containous/whoami:lat
+        # docker.io/kostiscodefresh/gitops-canary-app:v2.0
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
